# sudoku_cnn

./: generate_sudoku_data.py  pyproject.toml  scratch.py
sudoku/: generate_sudoku.py  sudoku.py
