[project]
name = "sudoku-cnn"
version = "0.1.0"
description = ""
authors = [
    {name = "Spencer Peterson",email = "spencer9696@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

